tests/negative/match_type_as_value.lev
class C { int f; new C() { } }
C c = C();
match (c) {
    C::f => console.writeln("x");
    else => console.writeln("y");
};
